# cnn

./: .gitignore  CLAUDE.md  mkdocs.yml  moocs.md  pyproject.toml  requirements.txt  setup-wiki.sh
DIP3E_Original_Images_CH02/: CITATION.md
book/: README.md  myst.yml
docs/: llm-wiki-plan.md
media/Tex/: 076f4c549ad23eb0.tex  0fcca6a7e11910dd.tex  15237cb7a523144a.tex  17d775647db1015c.tex  25ec6b0a1c184327.tex  4e4d8ad46c1be730.tex  81ba759721e20502.tex  830d69dba6012014.tex  836d983521062aca.tex  91d6eefefceaddce.tex  9659d34a4ab1b6a3.tex  9a8f8feb61d5fe27.tex  a6b8921f03236131.tex  ac3858d7b93bdb35.tex  b37ecc278d390fd3.tex  b644f5bfa3ac8e77.tex  c56a854156b287ce.tex  c8527b98bb459028.tex  d83d2095a1865f3e.tex  dd5df5feb5eab9b6.tex  ef272e6c859950bb.tex  f9ba8fde97ac50aa.tex  fcea83871d80e650.tex
my_codes/: chapter1.ipynb
scripts/: main.py  tutorial.ipynb  visualise_normalisation.py
site/: 404.html  index.html
site/log/: index.html
site/search/: search_index.json
tutorials/00_introduction_to_digital_images/: README.md  exercises.md  exercises.py  part1_digitisation.md  part1_digitisation.py  part1_sampling_and_sensors.md  part1_sampling_and_sensors.py  part2_pixels_and_resolution.md  part2_sensor_physics.md  part2_sensor_physics.py  part3_contrast_and_dynamic_range.md  part3_pixels_and_resolution.py  part4_contrast_and_dynamic_range.py  part5_zoom_and_aliasing.md  part5_zoom_and_aliasing.py  part6_colour_and_pipeline.md  part6_colour_and_pipeline.py
utils/: __init__.py  image_io.py  matching.py  transforms.py  visualization.py
wiki/: index.md  log.md
(+96 files in other folders)
